username and full name are two separate fields and fixed spacing between button

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -39,7 +39,7 @@ h2.Login{
     flex-direction: row;
     width: 155px;
     box-shadow: 2px 2px 5px grey;
-
+    margin-top: 1rem;
 }
 
 
